[package]
name = "databend-base"
version = "0.3.0"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1"
jsonwebtoken = { version = "9", default-features = false }
ctrlc = "3.4"
futures = "0.3"
log = "0.4"
pin-project-lite = "0.2"
rand = "0.9"
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
